# LinuxFloatingWindow

./: .gitignore  CMakeLists.txt  Ini.cpp  Ini.h  MainWindow.cpp  MainWindow.h  looper.cpp  looper.h  main.cpp  network.cpp  network.h  res.qrc
